# automate-idea-to-social

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  launch.sh  pyproject.toml  setup.py
docs/: DEV_NOTES.md  TODO.md  actions.md  agents.md  environment.md  events.md  run-options.md
scripts/: launch-app.sh
shell/: docker-compose.sh  install.dev.sh  install.sh  pre_run.sh  run.blog-agent.sh  run.docker.sh  run.it.sh  run.sh  run.test-agent.sh  run.tests.api.sh  run.tests.sh  run.web.sh  task.start.sh
src/aideas/: Dockerfile  docker-entrypoint.sh  main.py  requirements.in  requirements.txt  web.py
src/aideas/app/: app.py  config.py  config_loader.py  env.py  i18n.py  image_service.py  paths.py  request_data.py  run_context.py  task.py  text.py  web_service.py
src/aideas/app/action/: action.py  action_handler.py  action_result.py  action_signatures.py  actions.py  browser_action_handler.py  content_publisher_action_handler.py  element_action_handler.py  variable_parser.py
src/aideas/app/agent/: agent.py  agent_factory.py  agent_name.py  automator.py  automator_agent.py  blog_agent.py  blog_automator_agent.py  browser_automator_agent.py  event_handler.py  youtube_api_agent.py
src/aideas/app/io/: file.py  logging.py
src/aideas/app/result/: result_set.py
src/aideas/app/web/: browser_automator.py  element_selector.py  (+2 more)
src/aideas/templates/: automate.html  index.html
src/main/python/: main.py  requirements.txt
src/python/main/: Dockerfile  main.py  requirements.txt
src/python/test/: main.py  run-all-tests.sh  xpath_test.py
src/resources/config/: app.config.yaml  browser-undetected.config.yaml  browser-visible.config.yaml  browser.config.yaml  logging.config.yaml  run.config.yaml
src/shell/: docker-compose.sh  launch-app.sh
src/shell/automate-jamstack/: run-convert-to-markdown.sh
src/test/: __init__.py
src/test/app/: agent_task_it.py  app_it.py  config_loader_test.py  config_test.py  env_test.py  run_context_test.py  search_config_test.py  task_it.py  test_functions.py  text_test.py  xpath_test.py
(+416 files in other folders)
